[package]
name = "deposit-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "*", features = ["persistence"] }
egui_extras = { version = "*" }
anyhow = { version = "*" }
serde = { version = "*" }
time = { version = "*" }
rust_decimal = { version = "*" }